--- a/trunk/WIP/Sources/Backend/TaxiNet/src/main/webapp/xhtml/driver/Drivers.xhtml
+++ b/trunk/WIP/Sources/Backend/TaxiNet/src/main/webapp/xhtml/driver/Drivers.xhtml
@@ -8,6 +8,8 @@
 
 <h:head>
 	<title>TaxiNet</title>
+	<link rel="stylesheet"
+		href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 </h:head>
 <h:body>
 	<h:form id="driver-form" prependId="false">
@@ -45,6 +47,7 @@
 			paginatorPosition="bottom" lazy="true" selectionMode="single"
 			selection="#{driverListBean.selectedDriver}" rowKey="#{driver.id}"
 			value="#{driverListBean.driverList}" var="driver"
+			paginatorAlwaysVisible="false"
 			paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} ">
 			<p:column headerText="#{msg['login.userName']}"
 				style="text-align:left">
@@ -66,12 +69,26 @@
 				<h:outputLabel value="#{driver.plate}" />
 			</p:column>
 			<p:column>
-				<p:commandLink value="Chi tiết"
+				<p:commandButton icon="ui-icon-search"
 					oncomplete="PF('driver-info-dialog').show();"
 					update=":driver-form:info-form"
 					actionListener="#{driverListBean.showChosenDriverInfo(driver)}">
-						<f:setPropertyActionListener value="#{driver}" target="#{driverListBean.selectedDriver}" />
-					</p:commandLink>
+					<f:setPropertyActionListener value="#{driver}"
+						target="#{driverListBean.selectedDriver}" />
+				</p:commandButton>
+				<p:commandButton icon="ui-icon-pencil"
+					oncomplete="PF('driver-info-dialog').show();"
+					update=":driver-form:info-form"
+					actionListener="#{driverListBean.editSelectedDriverInfo(driver)}">
+					<f:setPropertyActionListener
+						target="#{driverListBean.selectedDriver}" value="#{driver}" />
+				</p:commandButton>
+				<p:commandButton icon="ui-icon-trash"
+					update=":driver-form:growl driver-list"
+					actionListener="#{driverListBean.removeDriver(driver)}">
+					<f:setPropertyActionListener
+						target="#{driverListBean.selectedDriver}" value="#{driver}" />
+				</p:commandButton>
 			</p:column>
 		</p:dataTable>
 		<br></br>
@@ -79,30 +96,72 @@
 			action="#{driverListBean.redirectToAddNewDriver}" />
 
 		<p:dialog id="info-form" widgetVar="driver-info-dialog"
-			resizable="false" modal="true" header=" Thông tin chi tiết lái xe">
-			<h:panelGrid id="info" columns="2">
-				<p:outputLabel value="Tên lái xe : " />
-				<p:inputText readonly="true"
-					value="#{driverListBean.driverDTO.firstName} #{driverListBean.driverDTO.lastName}" />
+			resizable="false" modal="true"
+			header="#{msg['driver.DriverInfo.driverinfo']}">
+			<h2>#{msg['feeAgent.personalInfo']}</h2>
+			<h:panelGrid id="driver-info-grid" columns="3">
+				<p:outputLabel value="#{msg['driver.firstName']}" />
+				<p:inputText disabled="true"
+					value="#{driverListBean.driverDTO.firstName} " />
+				<p:outputLabel />
+				<p:outputLabel value="#{msg['driver.lastName']}" />
+				<p:inputText disabled="true"
+					value="#{driverListBean.driverDTO.lastName}" />
+				<p:outputLabel />
 				<p:outputLabel value="Email : " />
-				<p:inputText readonly="true"
+				<p:inputText id="selected-driver-email"
+					disabled="#{driverListBean.readOnly}" required="true"
 					value="#{driverListBean.driverDTO.email}" />
-				<p:outputLabel value="Username : " />
-				<p:inputText value="#{driverListBean.driverDTO.username}"
-					readonly="true" />
-				<p:outputLabel value="Phone number : " />
-				<p:inputText readonly="true"
-					value="#{driverListBean.driverDTO.phoneNumber}" />
-				<p:outputLabel value="Plate : "/>
-				<p:inputText value="#{driverListBean.driverDTO.plate}"/>
-				<p:outputLabel value="Country : " />
-				<p:inputText readonly="true"
+				<p:message for="selected-driver-email" />
+				<p:outputLabel value="#{msg['feeAgent.nation']}" />
+				<p:inputText disabled="true"
 					value="#{driverListBean.driverDTO.country}" />
-				<p:outputLabel value="Language : " />
-				<p:inputText readonly="true"
-					value="#{driverListBean.driverDTO.language}" />
+				<p:outputLabel />
+				<p:outputLabel value="#{msg['riderRegister.phoneNo']} : " />
+				<p:inputText id="selected-driver-phone"
+					disabled="#{driverListBean.readOnly}" required="true"
+					value="#{driverListBean.driverDTO.phoneNumber}" />
+				<p:message for="selected-driver-phone" />
 			</h:panelGrid>
+			<h2>#{msg['feeAgent.accountInfo']}</h2>
+			<h:panelGrid id="account-info-grid" columns="3">
+				<p:outputLabel value="#{msg['riderRegister.languages']} : " />
+				<p:selectOneMenu id="selected-driver-language"
+					disabled="#{driverListBean.readOnly}"
+					value="#{driverListBean.driverDTO.language}" required="true">
+					<f:selectItem itemLabel="" itemValue="" />
+					<f:selectItems value="#{driverListBean.langList}" var="lang"
+						itemLabel="#{lang.language}" itemValue="#{lang.languageCode}" />
+				</p:selectOneMenu>
+				<p:message for="selected-driver-language" />
+				<p:outputLabel value="#{msg['feeAgent.username']} : " />
+				<p:inputText readonly="#{driverListBean.readOnly}"
+					value="#{driverListBean.driverDTO.username}"></p:inputText>
+				<p:outputLabel />
+			</h:panelGrid>
+			<h2>#{msg['driver.vehicleInfo']}</h2>
+			<h:panelGrid columns="3" id="vehicle-info-grid">
+				<p:outputLabel value="#{msg['driver.car']} : " />
+				<p:selectOneMenu id="selected-driver-carMaker"
+					disabled="#{driverListBean.readOnly}" required="true" value="">
+					<f:selectItem itemLabel="" itemValue="" />
+					<f:selectItems value="#{driverListBean.carMakerList}" var="car"
+						itemLabel="#{car.carMaker}" itemValue="#{car.carMakerId}" />
+				</p:selectOneMenu>
+				<p:message for="selected-driver-carMaker" />
+				<p:outputLabel value="#{msg['driver.licensePlate']} : " />
+				<p:inputText readonly="true"
+					value="#{driverListBean.driverDTO.plate}" />
+			</h:panelGrid>
+			<center>
+				<p:commandButton value="#{msg['feeAgent.save']}"
+					disabled="#{driverListBean.readOnly}"
+					update="vehicle-info-grid account-info-grid driver-info-grid"
+					actionListener="editSelectedDriverInfo">
+				</p:commandButton>
+			</center>
 		</p:dialog>
+		<p:growl id="growl" />
 	</h:form>
 </h:body>
 </html>
