--- a/trunk/WIP/Sources/Backend/TaxiNet/src/main/webapp/xhtml/driver/ChangePassword.xhtml
+++ b/trunk/WIP/Sources/Backend/TaxiNet/src/main/webapp/xhtml/driver/ChangePassword.xhtml
@@ -8,7 +8,7 @@
 
 <h:head>
 	<f:metadata>
-		<f:event listener="#{feeAgentHomeController.initData}"
+		<f:event listener="#{changePassController.initData}"
 			type="preRenderView"></f:event>
 	</f:metadata>
 	<title>TaxiNet</title>
