--- a/trunk/WIP/Sources/Backend/TaxiNet/src/main/webapp/xhtml/driver/Dashboard.xhtml
+++ b/trunk/WIP/Sources/Backend/TaxiNet/src/main/webapp/xhtml/driver/Dashboard.xhtml
@@ -6,11 +6,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 
-<h:head>
-	<f:metadata>
-		<f:event listener="#{feeAgentHomeController.initData}"
-			type="preRenderView"></f:event>
-	</f:metadata>
+<h:head>>
 	<title>TaxiNet</title>
 </h:head>
 <h:body>
